--- a/MovieWebService/indexBtnJSXSol2.html
+++ b/MovieWebService/indexBtnJSXSol2.html
@@ -14,26 +14,56 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.querySelector("#root");
-    // 1. 좋지 않은 방식 : rendering을 잊으면 안되기 때문에 좋지 않다..
+    // 1. 좋지 않은 방식 : rendering을 잊으면 안되기 때문에 좋지 않다...
+    /*
     let counter = 0;
     function countUp() {
       counter += 1;
+      // console.log(counter);
       reRender();
-      // 변경을 해줘야 하는 부분만 변경해주고 있다.
     }
 
     function reRender() {
       ReactDOM.render(<Container />, root);
     }
 
-    const Container = () => (
-      <div>
-        <h3>Total Clicks : {counter}</h3>
-        <button onClick={countUp} style={{ backgroundColor: "tomato" }}>
-          Click Me!
-        </button>
-      </div>
-    );
+    function Container() {
+      return (
+        <div>
+          <h3>Total Clicks : {counter}</h3>
+          <button style={{ backgroundColor: "yellow" }} onClick={countUp}>
+            Click Me!
+          </button>
+        </div>
+      );
+    }
     reRender();
+    */
+
+    // 2. 좋은 방식 : react hook 이용해서 데이터 저장하기.
+
+    function Container() {
+      const [counter, setCounter] = React.useState(0);
+      // setCounter를 사용하는 경우에는 const 써도 가능하다.
+      const onClick = () => {
+        /*
+        counter = counter + 1;
+        console.log(counter);
+        */
+        setCounter(counter + 1);
+        // read-only Error : const라고 지정했을 경우
+        // setCounter(counter + 1); // counter에 값 넣어주고 reRendering을 해줄 것 이다.
+      };
+
+      return (
+        <div>
+          <h3>Total Clicks : {counter}</h3>
+          <button style={{ backgroundColor: "green" }} onClick={onClick}>
+            Click Me!
+          </button>
+        </div>
+      );
+    }
+    ReactDOM.render(<Container />, root);
   </script>
 </html>
